fixing navigation link and alignments for each item and add flexi dialog

--- a/src/scss/_dialog.scss
+++ b/src/scss/_dialog.scss
@@ -1,7 +1,12 @@
 .cdt {
+    $dialog-padding: 24px;
+    $dialog-border-colors: #ccc;
+    $close-icon-color: #333;
+    box-sizing: border-box;
     &-dialog {
         &-container {
             transition: all 0.2s;
+            transform-origin: 50% 50%;
             position: fixed;
             top: 0;
             right: 0;
@@ -12,34 +17,74 @@
             visibility: visible;
             opacity: 1;
             .cdt-dialog {
-                transform:  translate(-50%, calc(-50% - 40px)) scale(1);
+                transform:  translate(-50%, calc(-50%)) scale(1);
+                transform-origin: 50% 50%;
             }
             &.hide {
-                visibility: hidden;    
+                visibility: hidden;
+                transform-origin: 50% 50%;
                 opacity: 0;
+                .cdt-dialog {
+                    transform: translate(-50%, -50%) scale(0.7);
+                }
             }
         }
         transition: all 0.2s;
         position: fixed;
         left: 50%;
         top: 50%;
-        transform-origin: 50% 100%;
-        transform: translate(-50%, -50%) scale(0.7);
+        transform-origin: 50% 50%;
+        transform: translate(-50%, -50%);
         z-index: 10;
         background: #fff;
         border-radius: 2px;
         width: 560px;
         min-height: 40px;
         box-shadow: 0 11px 15px -7px rgba(0,0,0,.2), 0 24px 38px 3px rgba(0,0,0,.14), 0 9px 46px 8px rgba(0,0,0,.12);
+        &.with-borders {
+            header {
+              border-bottom: 1px solid $dialog-border-colors;
+              align-items: center;
+              h1, h2, h3, h4, h5, h6 {
+                margin-bottom: 0;
+              }
+            }
+            .actions {
+                border-top: 1px solid $dialog-border-colors;
+            }
+          }
         header {
             height: 64px;
             box-sizing: border-box;
-            padding: 24px;
+            padding: $dialog-padding;
+            .close {
+                cursor: pointer;
+                width: 20px;
+                position: relative;
+                &:before, &:after {
+                  content: '';
+                  position: absolute;
+                  width: 100%;
+                  height: 3px;
+                  background: $close-icon-color;
+                  transform-origin: 50%;
+                  left: 0;
+                  top: 0;
+                }
+                &:before {
+                  transform: rotate(45deg);
+                }
+                &:after {
+                  transform: rotate(-45deg);
+                }
+              }
         }
         main {
-            padding: 10px 24px 15px 24px;
             font-size: 16px;
             color: #666;
+            .content {
+                padding: 10px $dialog-padding 15px $dialog-padding;
+             }
         }
         .actions {
             height: 50px;
@@ -55,5 +100,23 @@
                 }
             }
         }
+        &.flexi {
+            display: flex;
+            flex-direction: column;
+            z-index: 9999999;
+            left: 50%;
+            top: 50%;
+            width: 100vw;
+            height: 100vh;
+            header {
+              display: flex;
+              justify-content: space-between;
+              flex-grow: 0;
+            }
+            main {
+              flex: 1;
+              overflow: auto;
+            }
+          }
     }
 }
